--- a/src/main/resources/static/Pages/style.css
+++ b/src/main/resources/static/Pages/style.css
@@ -5,8 +5,6 @@ body {
     margin: 0;
     padding: 20px;
 }
-
-
 .navbar-brand {
     font-size: 24px;
     color: #000000;
@@ -17,17 +15,17 @@ body {
     transition: background-color 0.3s ease;
 }
 .container {
-    width: 600px;
-    margin: auto;
+    width: 700px;
+    margin-top: 5px;
     background: linear-gradient(#6a7ec2, #2870a0);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    
 }
 .container_nav {
     width: auto;
     margin: auto;
+    margin-bottom: 0%;
     background: linear-gradient(#6a7ec2, #2870a0);
     padding: 10px 20px;
     border-radius: 8px;
